chore: General refactoring and fixing minor performance issues.