@@ -396,7 +396,7 @@ public class Formatter {
         Collections.sort(sortedIssues, new Comparator<String>() {
             @Override
             public int compare(String a, String b) {
-                return new Integer(-a.length()).compareTo(new Integer(b.length()));
+                return Integer.valueOf(-a.length()).compareTo(new Integer(b.length()));
             }
         });
         return sortedIssues;
